--- a/wear/src/main/res/layout/contador.xml
+++ b/wear/src/main/res/layout/contador.xml
@@ -1,10 +1,8 @@
-<android.support.wear.widget.SwipeDismissFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_dismiss_root"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fondo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -109,5 +107,4 @@
         android:id="@+id/dismiss_overlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</android.support.wear.widget.SwipeDismissFrameLayout>
-
+</FrameLayout>
