--- a/wear/src/main/res/layout/swipe_dismiss.xml
+++ b/wear/src/main/res/layout/swipe_dismiss.xml
@@ -1,26 +1,43 @@
-<android.support.wear.widget.SwipeDismissFrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_dismiss_root"
+<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
-    <HorizontalScrollView
+    <!--<FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollX="200dp">
+        app:layout_box="all">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:padding="5dp">
+-->
+    <android.support.wear.widget.SwipeDismissFrameLayout
+        android:id="@+id/swipe_dismiss_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-            <TextView
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollX="200dp">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipis-cing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali-qua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-                android:textColor="@color/black" />
-        </LinearLayout>
-    </HorizontalScrollView>
-</android.support.wear.widget.SwipeDismissFrameLayout>
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipis-cing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali-qua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+                    android:textColor="@color/black" />
+            </LinearLayout>
+        </HorizontalScrollView>
+    </android.support.wear.widget.SwipeDismissFrameLayout>
+       <!-- </FrameLayout>
+    </FrameLayout>-->
+</android.support.wearable.view.BoxInsetLayout>
