--- a/wear/src/main/res/values/styles.xml
+++ b/wear/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light"/>
-    <style name="AppTheme" parent="AppBaseTheme"/>
-    <style name="AppThemeNoSwipeToDismiss" parent="@style/AppTheme">
+
+    <style name="AppTheme" parent="android:Theme.DeviceDefault"> <!-- ajustes que no sean específicos de un nivel de API particular--> </style>
+
+    <style name="AppThemeNoSwipeToDismiss" parent="AppTheme">
         <item name="android:windowSwipeToDismiss">false</item>
     </style>
 </resources>
